work/log_err
Compiling MyKpipi_normal_TIS_LASS.cc
MyKpipi_normal_TIS_LASS.cc: In function ‘int main(int, char**)’:
MyKpipi_normal_TIS_LASS.cc:499:67: error: class template argument deduction failed:
  499 |   LauCPFitModel fitModel(negSigModel, posSigModel, kTRUE, "charge");
      |                                                                   ^
MyKpipi_normal_TIS_LASS.cc:499:67: error: no matching function for call to ‘LauCPFitModel(LauIsobarDynamics<LauAbsResonance<LauGounarisSakuraiRes> >&, LauIsobarDynamics<LauAbsResonance<LauGounarisSakuraiRes> >&, const Bool_t&, const char [7])’
In file included from MyKpipi_normal_TIS_LASS.cc:26:
../inc/LauCPFitModel.hh:582:5: note: candidate: ‘template<class ... RESMODELs> LauCPFitModel(const LauCPFitModel<RESMODELs>&)-> LauCPFitModel<RESMODELs>’
  582 |     LauCPFitModel(const LauCPFitModel& rhs);
      |     ^~~~~~~~~~~~~
../inc/LauCPFitModel.hh:582:5: note:   template argument deduction/substitution failed:
MyKpipi_normal_TIS_LASS.cc:499:67: note:   ‘LauIsobarDynamics<LauAbsResonance<LauGounarisSakuraiRes> >’ is not derived from ‘const LauCPFitModel<RESMODELs>’
  499 |   LauCPFitModel fitModel(negSigModel, posSigModel, kTRUE, "charge");
      |                                                                   ^
In file included from MyKpipi_normal_TIS_LASS.cc:26:
../inc/LauCPFitModel.hh:76:5: note: candidate: ‘template<class ... RESMODELs> LauCPFitModel(LauIsobarDynamics<RESMODELs ...>*, LauIsobarDynamics<RESMODELs ...>*, Bool_t, const TString&)-> LauCPFitModel<RESMODELs>’
   76 |     LauCPFitModel(LauIsobarDynamics<RESMODELs...>* negModel, LauIsobarDynamics<RESMODELs...>* posModel, Bool_t tagged = kTRUE, const TString& tagVarName = "charge");
      |     ^~~~~~~~~~~~~
../inc/LauCPFitModel.hh:76:5: note:   template argument deduction/substitution failed:
MyKpipi_normal_TIS_LASS.cc:499:67: note:   mismatched types ‘LauIsobarDynamics<RESMODELs ...>*’ and ‘LauIsobarDynamics<LauAbsResonance<LauGounarisSakuraiRes> >’
  499 |   LauCPFitModel fitModel(negSigModel, posSigModel, kTRUE, "charge");
      |                                                                   ^
MyKpipi_normal_TIS_LASS.cc:552:29: warning: unused variable ‘idx2’ [-Wunused-variable]
  552 |     string::size_type idx1, idx2;
      |                             ^~~~
MyKpipi_normal_TIS_LASS.cc:666:14: error: base operand of ‘->’ has non-pointer type ‘LauIsobarDynamics<LauAbsResonance<LauGounarisSakuraiRes> >’
  666 |   negSigModel->calculateRhoOmegaFitFractions(kTRUE);
      |              ^~
MyKpipi_normal_TIS_LASS.cc:667:14: error: base operand of ‘->’ has non-pointer type ‘LauIsobarDynamics<LauAbsResonance<LauGounarisSakuraiRes> >’
  667 |   posSigModel->calculateRhoOmegaFitFractions(kTRUE);
      |              ^~
MyKpipi_normal_TIS_LASS.cc:381:16: warning: unused variable ‘useTH2Poly’ [-Wunused-variable]
  381 |   const Bool_t useTH2Poly = kTRUE;
      |                ^~~~~~~~~~
MyKpipi_normal_TIS_LASS.cc:442:8: warning: unused variable ‘negEffHisto’ [-Wunused-variable]
  442 |   TH2* negEffHisto = dynamic_cast<TH2*>(effHistoFile->Get(negEffHistoName));
      |        ^~~~~~~~~~~
MyKpipi_normal_TIS_LASS.cc:460:21: warning: unused variable ‘resInfo2’ [-Wunused-variable]
  460 |   LauResonanceInfo* resInfo2(0);
      |                     ^~~~~~~~
MyKpipi_normal_TIS_LASS.cc:461:21: warning: unused variable ‘resInfo3’ [-Wunused-variable]
  461 |   LauResonanceInfo* resInfo3(0);//resMaker.setSpinFormalism ( LauAbsResonance :: Legendre );
      |                     ^~~~~~~~
Makefile:133: recipe for target 'tmp/objects/MyKpipi_normal_TIS_LASS.o' failed
make: *** [tmp/objects/MyKpipi_normal_TIS_LASS.o] Error 1
